--- a/GameUserSettings.ini
+++ b/GameUserSettings.ini
@@ -1,289 +1,70 @@
-[/Script/ShooterGame.ShooterGameUserSettings]
-MasterAudioVolume=1.000000
-MusicAudioVolume=0.000000
-SFXAudioVolume=1.000000
-VoiceAudioVolume=2.000000
-CharacterAudioVolume=1.000000
-UIScaling=1.000000
-UIQuickbarScaling=1.000000
-CameraShakeScale=0.000000
-bFirstPersonRiding=False
-bThirdPersonPlayer=False
-bInventoryHideUnlearnedEngrams=False
-bShowStatusNotificationMessages=True
-TrueSkyQuality=0.000000
-FOVMultiplier=1.250000
-GroundClutterDensity=0.000000
-bFilmGrain=False
-bMotionBlur=False
-bUseDistanceFieldAmbientOcclusion=False
-bUseSSAO=False
-bShowChatBox=True
-bCameraViewBob=False
-bInvertLookY=False
-bFloatingNames=True
-bChatBubbles=False
-bHideServerInfo=True
-bJoinNotifications=True
-bCraftablesShowAllItems=False
-bLocalInventoryItemsShowAllItems=False
-bLocalInventoryCraftingShowAllItems=True
-bRemoteInventoryItemsShowAllItems=False
-bRemoteInventoryCraftingShowAllItems=False
-bRemoteInventoryShowEngrams=True
-bForceDisableSuperDetailMode=True
-LookLeftRightSensitivity=0.390553
-LookUpDownSensitivity=0.413293
-GraphicsQuality=4
-ActiveLingeringWorldTiles=1
-ClientNetQuality=3
-LastServerSearchType=3
-LastServerSort=2
-LastPVESearchType=0
-LastDLCTypeSearchType=0
-LastServerSortAsc=True
-LastAutoFavorite=True
-LastServerSearchHideFull=False
-LastServerSearchProtected=False
-LastServerSearchIncludeServersWithActiveMods=True
-HideItemTextOverlay=True
-bQuickToggleItemNames=False
-bDistanceFieldShadowing=False
-LODScalar=0.000000
-bToggleToTalk=False
-HighQualityMaterials=False
-HighQualitySurfaces=False
-bTemperatureF=False
-bDisableTorporEffect=False
-bChatShowSteamName=False
-bChatShowTribeName=True
-bReverseTribeLogOrder=False
-EmoteKeyBind1=0
-EmoteKeyBind2=0
-bNoBloodEffects=False
-bLowQualityVFX=True
-bSpectatorManualFloatingNames=False
-bSuppressAdminIcon=False
-bUseSimpleDistanceMovement=True
-bDisableMeleeCameraSwingAnims=True
-bHighQualityAnisotropicFiltering=False
-bUseLowQualityLevelStreaming=True
-bPreventInventoryOpeningSounds=True
-bPreventItemCraftingSounds=False
-bPreventHitMarkers=False
-bPreventCrosshair=False
-bPreventColorizedItemNames=False
-bHighQualityLODs=False
-bExtraLevelStreamingDistance=False
-bEnableColorGrading=False
-DOFSettingInterpTime=0.000000
-bDisableBloom=True
-bDisableLightShafts=True
-LastJoinedSessionPerCategory=" "
-LastJoinedSessionPerCategory=" "
-LastJoinedSessionPerCategory=" "
-LastJoinedSessionPerCategory="Abyss ARK"
-LastJoinedSessionPerCategory=" "
-LastJoinedSessionPerCategory=" "
-LastJoinedSessionPerCategory=" "
-LastJoinedSessionPerCategory=" "
-LastJoinedSessionPerCategory=" "
-bDisableMenuTransitions=True
-bEnableInventoryItemTooltips=True
-bRemoteInventoryShowCraftables=False
-bNoTooltipDelay=True
-LocalItemSortType=0
-LocalCraftingSortType=0
-RemoteItemSortType=0
-RemoteCraftingSortType=0
-VersionMetaTag=1
-ShowExplorerNoteSubtitles=False
-DisableMenuMusic=True
-DisableDefaultCharacterItems=True
-bRequestDefaultCharacterItemsOnce=False
-bHasSeenGen2Intro=False
-bHideFloatingPlayerNames=False
-bHideGamepadItemSelectionModifier=False
-bToggleExtendedHUDInfo=False
-PlayActionWheelClickSound=False
-CompanionReactionVerbosity=3
-EnableEnvironmentalReactions=True
-EnableRespawnReactions=True
-EnableDeathReactions=True
-EnableSayHelloReactions=True
-EnableEmoteReactions=True
-EnableMovementSounds=True
-DisableSubtitles=True
-CompanionSubtitleVerbosityLevel=3
-CompanionIsHiddenState=False
-MaxAscensionLevel=0
-bHostSessionHasBeenOpened=True
-bForceTPVCameraOffset=False
-bDisableTPVCameraInterpolation=True
-bFPVClimbingGear=False
-bFPVGlidingGear=False
-Gamma1=1.940000
-Gamma2=3.740000
-AmbientSoundVolume=1.000000
-bAllowAnimationStaggering=True
-bUseOldThirdPersonCameraTrace=False
-bUseOldThirdPersonCameraOffset=False
-bLowQualityAnimations=True
-bShowedGenesisDLCBackground=False
-bShowedGenesis2DLCBackground=False
-bViewedAnimatedSeriesTrailer=False
-bViewedARK2Trailer=False
-bShowRTSKeyBinds=True
-bHasCompletedGen2=False
-bUseVSync=False
-MacroCtrl0=
-MacroCtrl1=
-MacroCtrl2=
-MacroCtrl3=
-MacroCtrl4=
-MacroCtrl5=
-MacroCtrl6=
-MacroCtrl7=
-MacroCtrl8=
-MacroCtrl9=
-ResolutionSizeX=2560
-ResolutionSizeY=1440
-LastUserConfirmedResolutionSizeX=1280
-LastUserConfirmedResolutionSizeY=720
-WindowPosX=-1
-WindowPosY=-1
-bUseDesktopResolutionForFullscreen=False
-FullscreenMode=1
-LastConfirmedFullscreenMode=2
-Version=5
-
-[ScalabilityGroups]
-sg.ResolutionQuality=100
-sg.ViewDistanceQuality=0
-sg.AntiAliasingQuality=0
-sg.ShadowQuality=0
-sg.PostProcessQuality=0
-sg.TextureQuality=0
-sg.EffectsQuality=3
-sg.TrueSkyQuality=3
-sg.GroundClutterQuality=3
-sg.IBLQuality=1
-sg.HeightFieldShadowQuality=0
-sg.GroundClutterRadius=0
-
-[SessionSettings]
-SessionName=ARK #213440
-
-[/Script/Engine.GameSession]
-MaxPlayers=70
-
 [ServerSettings]
-ListenServerTetherDistanceMultiplier=1.000000
-RaidDinoCharacterFoodDrainMultiplier=1.000000
-StructurePreventResourceRadiusMultiplier=1.000000
-PvEDinoDecayPeriodMultiplier=1.000000
-AllowRaidDinoFeeding=False
-PerPlatformMaxStructuresMultiplier=1.000000
-GlobalVoiceChat=False
-ProximityChat=False
-NoTributeDownloads=False
-AllowThirdPersonPlayer=True
-AlwaysNotifyPlayerLeft=False
-DontAlwaysNotifyPlayerJoined=False
-ServerHardcore=False
-ServerPVE=False
-ServerCrosshair=True
-ServerForceNoHUD=False
-ShowMapPlayerLocation=False
-EnablePvPGamma=True
-DisableStructureDecayPvE=False
-AllowFlyerCarryPvE=False
-OnlyAllowSpecifiedEngrams=False
-PreventDownloadSurvivors=False
-PreventDownloadItems=False
-PreventDownloadDinos=False
-DisablePvEGamma=False
-DisableDinoDecayPvE=False
-AdminLogging=False
-AllowCaveBuildingPvE=False
-ForceAllowCaveFlyers=False
-PreventOfflinePvP=False
-PvPDinoDecay=False
-OverrideStructurePlatformPrevention=False
-AllowAnyoneBabyImprintCuddle=False
-DisableImprintDinoBuff=False
-ShowFloatingDamageText=False
-PreventDiseases=False
-NonPermanentDiseases=False
+ShowFloatingDamageText=True
+PvEAllowStructuresAtSupplyDrops=True
 EnableExtraStructurePreventionVolumes=False
-PreventTribeAlliances=False
-bAllowFlyerSpeedLeveling=False
-PreventOfflinePvPInterval=0.010000
-ActiveEvent=
-ActiveMods=1404697612,1428596566,1568516940,1814953878,1837445660,1967741708,2121156303,2559520609,731604991,741203089,761535755,795044845,821530042,889745138,902616446,1404697612,1428596566,1568516940,1814953878,1837445660,1967741708,2121156303,2559520609,731604991,741203089,761535755,795044845,821530042,889745138,902616446
-ActiveMapMod=0
+bPvEDisableFriendlyFire=True
+bAllowFlyerSpeedLeveling=True
 RCONPort=27020
-TheMaxStructuresInRange=10500.000000
+TheMaxStructuresInRange=3000.000000
 OxygenSwimSpeedStatMultiplier=1.000000
+StructurePreventResourceRadiusMultiplier=1.000000
 TribeNameChangeCooldown=15.000000
 PlatformSaddleBuildAreaBoundsMultiplier=1.000000
-StructurePickupTimeAfterPlacement=30.000000
+AlwaysAllowStructurePickup=True
 StructurePickupHoldDuration=0.500000
 AllowIntegratedSPlusStructures=True
 AllowHideDamageSourceFromLogs=True
-KickIdlePlayersPeriod=3600.000000
-AutoSavePeriodMinutes=15.000000
-MaxTamedDinos=5000.000000
+RaidDinoCharacterFoodDrainMultiplier=1.000000
+PvEDinoDecayPeriodMultiplier=1.000000
+KickIdlePlayersPeriod=0
+PerPlatformMaxStructuresMultiplier=30.000000
+ListenServerTetherDistanceMultiplier=1.000000
+MaxTamedDinos=3000.000000
 ItemStackSizeMultiplier=1.000000
 RCONServerGameLogBuffer=600.000000
+ActiveMods=2559520609,731604991,741203089,761535755,795044845,821530042,889745138,902616446,937322940,1404697612,1428596566,1814953878,1837445660,1967741708,2121156303
+AllowCaveBuildingPvE=True
+AllowFlyerCarryPvE=True
+allowThirdPersonPlayer=True
+alwaysNotifyPlayerJoined=True
+alwaysNotifyPlayerLeft=True
+AutoSavePeriodMinutes=30
+bAllowPlatformSaddleMultiFloors=True
+bForceCanRideFliers=True
+DifficultyOffset=1
+DisablePvEGamma=False
+DisableWeatherFog=True
+ShowMapPlayerLocation=True
+AllowAnyoneBabyImprintCuddle=true
+OverrideStructurePlatformPrevention=True
+MaxPlatformSaddleStructureLimit=3000
+PlayerCharacterWaterDrainMultiplier=0.7
+PlayerCharacterFoodDrainMultiplier=0.7
+PlayerCharacterStaminaDrainMultiplier=0.7
+DinoCharacterStaminaDrainMultiplier=0.7
+XPMultiplier=3
+TamingSpeedMultiplier=3
+ServerAdminPassword=***
+ServerCrosshair=True
+ServerPassword=***
+ServerPVE=True
 AllowHitMarkers=True
-DifficultyOffset=0.200000
+StructurePickupTimeAfterPlacement=30.000000
 
-[Player.Info]
-LastHostedMapPlayed=TheIsland
-LastMapPlayed=TheIsland
-PlayedMaps=TheIsland
-PlayedMaps=Fjordur
+[StructuresPlus]
+RemoveFloorRequirementFromStructurePlacement=True
+EnableEngramOverride=True
+OverrideTekEngrams=True
+EnableStructureSound=True
+ArePlatformsImmuneToDamage=True
+CloningCostMultiplier=0.3
+AllowMakingWeaponsAndArmorBPs=True
+AllowTekItemBlueprintCreation=True
+RemoveLearnedEngramRequirementFromConverter=True
+AllowCropPlotStacking=True
 
-[/Game/PrimalEarth/CoreBlueprints/TestGameMode.TestGameMode_C]
-PerLevelStatsMultiplier_Player[0]=1.000000
-PerLevelStatsMultiplier_Player[1]=1.000000
-PerLevelStatsMultiplier_Player[2]=1.000000
-PerLevelStatsMultiplier_Player[3]=1.000000
-PerLevelStatsMultiplier_Player[4]=1.000000
-PerLevelStatsMultiplier_Player[5]=1.000000
-PerLevelStatsMultiplier_Player[6]=1.000000
-PerLevelStatsMultiplier_Player[7]=1.000000
-PerLevelStatsMultiplier_Player[8]=1.000000
-PerLevelStatsMultiplier_Player[9]=1.000000
-PerLevelStatsMultiplier_DinoTamed[1]=1.000000
-PerLevelStatsMultiplier_DinoTamed[2]=1.000000
-PerLevelStatsMultiplier_DinoTamed[3]=1.000000
-PerLevelStatsMultiplier_DinoTamed[4]=1.000000
-PerLevelStatsMultiplier_DinoTamed[5]=1.000000
-PerLevelStatsMultiplier_DinoTamed[6]=1.000000
-PerLevelStatsMultiplier_DinoTamed[9]=1.000000
-PerLevelStatsMultiplier_DinoTamed_Add[1]=1.000000
-PerLevelStatsMultiplier_DinoTamed_Add[2]=1.000000
-PerLevelStatsMultiplier_DinoTamed_Add[3]=1.000000
-PerLevelStatsMultiplier_DinoTamed_Add[4]=1.000000
-PerLevelStatsMultiplier_DinoTamed_Add[5]=1.000000
-PerLevelStatsMultiplier_DinoTamed_Add[6]=1.000000
-PerLevelStatsMultiplier_DinoTamed_Add[9]=1.000000
-PerLevelStatsMultiplier_DinoTamed_Affinity[1]=1.000000
-PerLevelStatsMultiplier_DinoTamed_Affinity[2]=1.000000
-PerLevelStatsMultiplier_DinoTamed_Affinity[3]=1.000000
-PerLevelStatsMultiplier_DinoTamed_Affinity[4]=1.000000
-PerLevelStatsMultiplier_DinoTamed_Affinity[5]=1.000000
-PerLevelStatsMultiplier_DinoTamed_Affinity[6]=1.000000
-PerLevelStatsMultiplier_DinoTamed_Affinity[9]=1.000000
-PerLevelStatsMultiplier_DinoWild[0]=1.000000
-PerLevelStatsMultiplier_DinoWild[1]=1.000000
-PerLevelStatsMultiplier_DinoWild[2]=1.000000
-PerLevelStatsMultiplier_DinoWild[3]=1.000000
-PerLevelStatsMultiplier_DinoWild[4]=1.000000
-PerLevelStatsMultiplier_DinoWild[5]=1.000000
-PerLevelStatsMultiplier_DinoWild[6]=1.000000
-PerLevelStatsMultiplier_DinoWild[7]=1.000000
-PerLevelStatsMultiplier_DinoWild[8]=1.000000
-PerLevelStatsMultiplier_DinoWild[9]=1.000000
+[SessionSettings]
+SessionName=***
+
+[/Script/Engine.GameSession]
+MaxPlayers=***
