--- a/GameUserSettings.ini
+++ b/GameUserSettings.ini
@@ -1,70 +1,73 @@
 [ServerSettings]
-ShowFloatingDamageText=True
-PvEAllowStructuresAtSupplyDrops=True
+bAllowPlatformSaddleMultiFloors=True
+MaxPlatformSaddleStructureLimit=3000
+
+PerPlatformMaxStructuresMultiplier=30
+TheMaxStructuresInRange=3000
+OverrideStructurePlatformPrevention=True
 EnableExtraStructurePreventionVolumes=False
-bPvEDisableFriendlyFire=True
-bAllowFlyerSpeedLeveling=True
-RCONPort=27020
-TheMaxStructuresInRange=3000.000000
-OxygenSwimSpeedStatMultiplier=1.000000
-StructurePreventResourceRadiusMultiplier=1.000000
-TribeNameChangeCooldown=15.000000
-PlatformSaddleBuildAreaBoundsMultiplier=1.000000
-AlwaysAllowStructurePickup=True
-StructurePickupHoldDuration=0.500000
 AllowIntegratedSPlusStructures=True
-AllowHideDamageSourceFromLogs=True
-RaidDinoCharacterFoodDrainMultiplier=1.000000
-PvEDinoDecayPeriodMultiplier=1.000000
-KickIdlePlayersPeriod=0
-PerPlatformMaxStructuresMultiplier=30.000000
-ListenServerTetherDistanceMultiplier=1.000000
-MaxTamedDinos=3000.000000
-ItemStackSizeMultiplier=1.000000
-RCONServerGameLogBuffer=600.000000
-ActiveMods=2559520609,731604991,741203089,761535755,795044845,821530042,889745138,902616446,937322940,1404697612,1428596566,1814953878,1837445660,1967741708,2121156303
+
+PvEAllowStructuresAtSupplyDrops=True
 AllowCaveBuildingPvE=True
-AllowFlyerCarryPvE=True
+
+AlwaysAllowStructurePickup=True
+bPvEDisableFriendlyFire=True
 allowThirdPersonPlayer=True
+ShowMapPlayerLocation=True
+DisableWeatherFog=True
+
+AllowFlyerCarryPvE=True
+bForceCanRideFliers=True
+
 alwaysNotifyPlayerJoined=True
 alwaysNotifyPlayerLeft=True
-AutoSavePeriodMinutes=30
-bAllowPlatformSaddleMultiFloors=True
-bForceCanRideFliers=True
-DifficultyOffset=1
-DisablePvEGamma=False
-DisableWeatherFog=True
-ShowMapPlayerLocation=True
-AllowAnyoneBabyImprintCuddle=true
-OverrideStructurePlatformPrevention=True
-MaxPlatformSaddleStructureLimit=3000
+
+ShowFloatingDamageText=True
+AllowHitMarkers=True
+
+bAllowFlyerSpeedLeveling=True
+AllowAnyoneBabyImprintCuddle=True
+MaxTamedDinos=3000
+TamingSpeedMultiplier=3
+
 PlayerCharacterWaterDrainMultiplier=0.7
 PlayerCharacterFoodDrainMultiplier=0.7
 PlayerCharacterStaminaDrainMultiplier=0.7
+
 DinoCharacterStaminaDrainMultiplier=0.7
-XPMultiplier=3
-TamingSpeedMultiplier=3
-ServerAdminPassword=***
-ServerCrosshair=True
-ServerPassword=***
+
+XPMultiplier=1.5
+
+DifficultyOffset=1
+
+AutoSavePeriodMinutes=30
+KickIdlePlayersPeriod=0
+
+ServerAdminPassword=AbyssAdmin
+ServerPassword=Abyss
 ServerPVE=True
-AllowHitMarkers=True
-StructurePickupTimeAfterPlacement=30.000000
+
+ActiveMods=2559520609,731604991,741203089,761535755,795044845,821530042,902616446,937322940,1404697612,1428596566,1814953878,1837445660,1967741708,2121156303,816908578
 
 [StructuresPlus]
 RemoveFloorRequirementFromStructurePlacement=True
-EnableEngramOverride=True
-OverrideTekEngrams=True
-EnableStructureSound=True
 ArePlatformsImmuneToDamage=True
-CloningCostMultiplier=0.3
-AllowMakingWeaponsAndArmorBPs=True
-AllowTekItemBlueprintCreation=True
-RemoveLearnedEngramRequirementFromConverter=True
 AllowCropPlotStacking=True
 
+EnableEngramOverride=True
+OverrideTekEngrams=True
+RemoveLearnedEngramRequirementFromConverter=True
+
+AllowMakingWeaponsAndArmorBPs=True
+AllowTekItemBlueprintCreation=True
+
+EnableStructureSound=True
+
+CloningCostMultiplier=0.3
+
 [SessionSettings]
-SessionName=***
+SessionName=Abyss ARK
 
 [/Script/Engine.GameSession]
-MaxPlayers=***
+MaxPlayers=100
