--- a/GameUserSettings.ini
+++ b/GameUserSettings.ini
@@ -44,8 +44,8 @@ DifficultyOffset=1
 AutoSavePeriodMinutes=30
 KickIdlePlayersPeriod=0
 
-ServerAdminPassword=AbyssAdmin
-ServerPassword=Abyss
+ServerAdminPassword=
+ServerPassword=
 ServerPVE=True
 
 ActiveMods=2559520609,731604991,741203089,761535755,795044845,821530042,902616446,937322940,1404697612,1428596566,1814953878,1837445660,1967741708,2121156303,816908578
