--- a/server/GameUserSettings.ini
+++ b/server/GameUserSettings.ini
@@ -44,8 +44,8 @@ DifficultyOffset=1
 AutoSavePeriodMinutes=30
 KickIdlePlayersPeriod=0
 
-ServerAdminPassword=
-ServerPassword=
+ServerAdminPassword=AdminPassword
+ServerPassword=Password
 ServerPVE=True
 
 ActiveMods=2559520609,731604991,741203089,761535755,795044845,821530042,902616446,937322940,1404697612,1428596566,1814953878,1837445660,1967741708,2121156303,816908578
@@ -67,7 +67,7 @@ EnableStructureSound=True
 CloningCostMultiplier=0.3
 
 [SessionSettings]
-SessionName=Abyss ARK
+SessionName=Session Name
 
 [/Script/Engine.GameSession]
 MaxPlayers=100
